test/compile-errors/extern-checks.crow
r record extern
	a str
	b nat64[]

u union extern
	a str

f void() extern

f void() noctx extern<c>

f str() noctx extern<c>

f void(a str) noctx extern<c>

f<a> void(a a) noctx extern<c>

f void(...a nat64[]) noctx extern<c>

some-spec spec
	foo void()

f void() extern<c> some-spec

f void() extern<c> noctx

f void() extern<c> unsafe

g nat() extern<c> global<c>

g nat() global

g nat() global<c> noctx

g nat() global<c> unsafe

g nat() global<c> trusted
